--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,11 +1,12 @@
 /* FONTS */
 
-@import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Calistoga&display=swap&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Calistoga&display=swap');
 
 /* GLOBAL STYLES */
 
 :root {
-  --font-primary: "Poppins", sans-serif;
+  --font-primary: "Calistoga", sans-serif;
   --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
   --bg-color: #990000;
@@ -319,7 +320,7 @@ section {
 .splide {
   position: absolute;
   top: 90px;
-  left: 5rem;
+  left: 0.5rem;
   z-index: -1;
 }
 
