--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,21 +1,20 @@
 /* FONTS */
 
-@import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Calistoga&display=swap&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Calistoga&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Calistoga&family=Libre+Franklin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto+Slab:wght@400;500;600;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 
 /* GLOBAL STYLES */
 
 :root {
-  --font-primary: "Calistoga", sans-serif;
-  --font-secondary: "Arvo", serif;
+  --font-primary: "Calistoga", serif;
+  --font-secondary: "Libre+Franklin", sans-serif;
   --font-code: "Roboto", monospace;
   --bg-color: #990000;
   --bg-color-transparent: #00163f80;
-  --font-color: #ffffff;
+  --font-color: #000000;
   --btn-bg-color: #ffffff;
-  --accent-color: #ffa33a;
-  --header-shadow: var(--accent-color) 0px 0px 5px;
-  --card-shadow: var(--accent-color) 0px 0px 20px;
+  --accent-color: #ff8800;
+  --header-shadow: var(--accent-color) 0px 0px 2px;
+  --card-shadow: var(--accent-color) 0px 0px 10px;
 }
 
 * {
@@ -58,7 +57,7 @@ header .container {
 
 .menu {
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
   align-items: center;
 }
 
