troubleshooting an unexpected spinner wheel

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -45,7 +45,7 @@ body {
 /* HEADER */
 
 header {
-  background-color: var(--bg-color);
+  background-color: #990000 ;
   box-shadow: var(--header-shadow);
 }
 
