--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -33,10 +33,10 @@ body {
 }
 
 .container {
-  display: inline-block;
+  display: inline flex;
   flex-direction: column;
   max-width: 1080px;
-  margin: auto auto;
+  margin: auto;
   padding: 1rem 1rem;
   justify-content: right;
   overflow: auto;
@@ -67,7 +67,7 @@ header .container {
   height: 100%;
   text-align: center;
   margin: 0 auto 0 35vw;
-  opacity: 0;
+  opacity: 1;
   transform: translateY(10vh);
   transition: all 0.5s ease-in-out;
 }
