--- a/frontend/css/style-20220404-1132am.css
+++ b/frontend/css/style-20220404-1132am.css
@@ -53,13 +53,11 @@ body {
 }
 
 .container {
-  display: flex;
+  display: inline flex;
   flex-direction: column;
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 1rem 2rem;
-  justify-content: center;
-  overflow: hidden;
+  margin: auto;
+  padding: 1rem 1rem;
+  overflow: auto;
 }
 
 /* HEADER */
@@ -121,7 +119,7 @@ header .container {
 
 .btn {
   display: inline-block;
-  padding: 1rem 2rem;
+  padding: 1rem 1.5rem;
   background: var(--btn-bg-color);
   color: #000000;
   font-family: var(--font-secondary);
@@ -148,6 +146,7 @@ header .container {
   border-radius: 5rem;
   margin-left: 2rem;
   border-color: #ffaa00;
+  text-align: right;
 }
 
 .hero-btn {
@@ -321,7 +320,7 @@ section {
 }
 
 .minted-container h1 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin-bottom: 1rem;
 }
 
@@ -338,8 +337,8 @@ section {
 
 .splide {
   position: absolute;
-  top: 90px;
-  left: 5rem;
+  top: 100px;
+  left: 0px;
   z-index: -1;
 }
 
