--- a/frontend/css/styleMintDapp.css
+++ b/frontend/css/styleMintDapp.css
@@ -1,40 +1,20 @@
 /* FONTS */
 
-@import url('https://fonts.googleapis.com/css2?family=Calistoga&family=Libre+Franklin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto+Slab:wght@400;500;600;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 /* GLOBAL STYLES */
 
 :root {
-  --font-primary: "Calistoga", serif;
-  --font-secondary: "Libre+Franklin", sans-serif;
+  --font-primary: "Poppins", sans-serif;
+  --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
-  --bg-color: #ffaa00;
+  --bg-color: #00163f;
   --bg-color-transparent: #00163f80;
-  --font-color: #000000;
+  --font-color: #ffffff;
   --btn-bg-color: #ffffff;
-  --accent-color: #ff6600;
-  --header-shadow: var(--accent-color) 0px 0px 2px;
-  --card-shadow: var(--accent-color) 0px 0px 10px;
-}
-
-/* unvisited link */
-a:link {
-  color: #990000;
-}
-
-/* visited link */
-a:visited {
-  color: #770000;
-}
-
-/* mouse over link */
-a:hover {
-  color: #e94200;
-}
-
-/* selected link */
-a:active {
-  color: #ff0000;
+  --accent-color: #be7efe;
+  --header-shadow: var(--accent-color) 0px 0px 5px;
+  --card-shadow: var(--accent-color) 0px 0px 20px;
 }
 
 * {
@@ -47,7 +27,7 @@ body {
   background-color: var(--bg-color);
   display: flex;
   flex-flow: column;
-  height: auto;
+  height: 100vh;
   color: var(--font-color);
   font-family: var(--font-primary);
 }
@@ -65,7 +45,7 @@ body {
 /* HEADER */
 
 header {
-  background-color: #990000 ;
+  background-color: var(--bg-color);
   box-shadow: var(--header-shadow);
 }
 
@@ -77,7 +57,7 @@ header .container {
 
 .menu {
   display: flex;
-  gap: 1rem;
+  gap: 2rem;
   align-items: center;
 }
 
@@ -87,7 +67,7 @@ header .container {
   height: 100%;
   text-align: center;
   margin: 0 auto 0 35vw;
-  opacity: 1;
+  opacity: 0;
   transform: translateY(10vh);
   transition: all 0.5s ease-in-out;
 }
@@ -101,7 +81,7 @@ header .container {
   text-shadow: 2px 2px 0 var(--accent-color);
   font-style: italic;
   margin: 2rem 0;
-  font-size: 1.5rem;
+  font-size: 3.5rem;
 }
 
 .not-connected p {
@@ -123,10 +103,10 @@ header .container {
   display: inline-block;
   padding: 1rem 2rem;
   background: var(--btn-bg-color);
-  color: #000000;
+  color: var(--accent-color);
   font-family: var(--font-secondary);
-  font-style: normal;
-  font-weight: normal;
+  font-style: italic;
+  font-weight: bold;
   font-size: 1rem;
   text-align: center;
   text-transform: capitalize;
@@ -147,7 +127,7 @@ header .container {
 .wallet-btn {
   border-radius: 5rem;
   margin-left: 2rem;
-  border-color: #ffaa00;
+  border-color: transparent;
 }
 
 .hero-btn {
@@ -206,7 +186,7 @@ section {
 .countdown .clock-item .count-number {
   background: var(--accent-color);
   color: var(--font-color);
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 700;
   font-family: var(--font-secondary);
   padding: 1rem;
@@ -232,8 +212,8 @@ section {
 .countdown h1 {
   text-shadow: 2px 2px 0 var(--accent-color);
   font-style: italic;
-  margin: 1rem 0;
-  font-size: 1.5rem;
+  margin: 2rem 0;
+  font-size: 3.5rem;
   text-align: center;
 }
 
@@ -270,7 +250,7 @@ section {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  background-color: #990000;
+  background-color: var(--accent-color);
   border-radius: 5px;
 }
 
@@ -307,7 +287,7 @@ section {
 }
 
 .total-price-container p {
-  color: #007710;
+  color: var(--accent-color);
 }
 
 /* MINTED CONTAINER */
@@ -321,12 +301,12 @@ section {
 }
 
 .minted-container h1 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
+  font-size: 5rem;
+  margin-bottom: 2rem;
 }
 
 .minted-container h2 {
-  font-size: 1.2rem;
+  font-size: 2rem;
   margin-bottom: 1rem;
 }
 
@@ -344,8 +324,7 @@ section {
 }
 
 .splide__slide {
-  border: solid;
-  border-color:#99000079 ;
+  border: var(--accent-color) solid;
   border-width: 5px 10px;
 }
 
@@ -356,7 +335,7 @@ section {
 /* SPINNER */
 .dot-spin {
   position: absolute;
-  top: 25%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(3);
 }
@@ -392,7 +371,7 @@ section {
     font-size: 1rem;
   }
   .countdown h1 {
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin: 1rem 0;
   }
   .countdown h2 {
