--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -71,7 +71,7 @@ header {
 }
 
 header .container {
-/*  flex-direction: row; */
+flex: auto;
   justify-content: space-between;
   align-items: center;
 }
@@ -365,7 +365,7 @@ section {
 
 /* MEDIA QUERIES */
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 768px) {
   .menu {
     gap: 1rem;
   }
