--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -53,12 +53,13 @@ body {
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
+  display: block;
+/*  flex-direction: column; */
   max-width: 960px;
   margin: 0 auto;
   padding: 1rem 2rem;
   justify-content: center;
+  word-wrap: break-word; /* added */
   overflow: auto;
 /*   overflow: hidden; */  
 }
@@ -66,6 +67,7 @@ body {
 /* HEADER */
 
 header {
+
   background-color: #990000 ;
   box-shadow: var(--header-shadow);
 }
@@ -89,7 +91,7 @@ flex: auto;
   text-align: center;
  margin: 0 5vw 0 15vw;
   /* margin: 0 auto 0 35vw; */
-  opacity: 1;
+/*  opacity: 0; */
   /* transform: translateY(10vh); */
   transition: all 0.5s ease-in-out;
 }
@@ -367,7 +369,7 @@ section {
 
 @media screen and (max-width: 768px) {
   .menu {
-    gap: 1rem;
+    gap: none;
   }
   .wallet-btn {
     margin-left: 0;
@@ -376,9 +378,9 @@ section {
   }
   .not-connected {
     background-color: var(--bg-color-transparent);
-    border-radius: 5px;
-padding: 0 1em 1em 0;
-margin: 3em 0 auto 3em;
+/*    border-radius: 5px; */
+padding: 0 0 0 1em;
+margin: 3em 0 2em 1em;
   }
   .countdown ul {
     display: grid;
